small spacing fix

--- a/src/screen.scss
+++ b/src/screen.scss
@@ -42,6 +42,7 @@ body {
 	width: 100%;
   height: auto;
 	padding-bottom: 10px;
+	padding-top: 15px;
 }
 
 //social icons
